Fixed the script to get GC options
Signed-off-by: Paolo Patierno <ppatierno@live.com>